--- a/SciCalc/SciCalc/Views/CalculatorPage.xaml
+++ b/SciCalc/SciCalc/Views/CalculatorPage.xaml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SciCalc.Views.CalculatorPage"
              Title="CalculatorPage">
     <Grid
         RowDefinitions="*,68,48,44,44,48,64,64,64,64"
-        ColumnDefinitions="*,*,*,*,*"
-        
-        <!--Color Answer-->
+        ColumnDefinitions="*,*,*,*,*">
+
         <BoxView
             VerticalOptions="Fill"
             HorizontalOptions="Fill"
             BackgroundColor="#262D37"
             Grid.Row="1"
             Grid.ColumnSpan="5" />
-        
+
+        <!--Color Scientific Row-->
         <BoxView
             VerticalOptions="Fill"
             HorizontalOptions="Fill"
@@ -23,4 +23,4 @@
             Grid.RowSpan="4"
             Grid.ColumnSpan="5" />
     </Grid>
-</ContentView>
+</ContentPage>
