--- a/SciCalc/SciCalc/Resources/Styles/Styles.xaml
+++ b/SciCalc/SciCalc/Resources/Styles/Styles.xaml
@@ -89,7 +89,7 @@
         <Setter Property="FontAutoScalingEnabled" Value="False" />
     </Style>
 
-    <Style TargetType="Label" x:Key="InputBoxtLabelStyle">
+    <Style TargetType="Label" x:Key="InputBoxLabelStyle">
         <Setter Property="FontSize" Value="32" />
         <Setter Property="TextColor" Value="White" />
         <Setter Property="FontFamily" Value="LightFont" />
